new verbiage on home page

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     Hi, my name is Matt Cliff, I live in Denver with my wife and two primary school aged kids.  We enjoy hiking, camping, skiing, and cooking.
     </p>
 
-    <p>
-    Top Reasons to hire Matt include
+    <p>So far with 20 years working in the IT field, I have recently relaunched my career following a 13 year stint at Wells Fargo.
+    With a new found passion for Cloud (AWS) orchastration and Machine Learning (R/Python) the top Reasons to hire Matt include
     <ul>
     <li>Math Foundation and Continual Learning - having completed a MS in Mathematics; taught calculus in graduate school; work with stochastic PDE and numerical analysis; abstract thinker. Foundation for Machine Learning and Predictive modeling with understanding the statistics and linear algebra</li>
 
